# eisen

./: .gitignore  LICENSE  Makefile  shell.nix  toolchain.toml
boot/: Cargo.toml  Makefile
boot/src/: config.rs  fs.rs  kernel.rs  logger.rs  main.rs
disk/: bootconfig.toml  gdiskcmds  mkdisk.sh  rundisk.sh
disk/wakatiwai/: driverlist  wtconfig.json
eisen-kernel/: Cargo.toml  Makefile  linker.ld  sign.sh  strip.sh
eisen-kernel/.cargo/: config.toml
eisen-kernel/src/: debug.rs  entry.rs  kdata.rs  lib.rs  panic.rs
eisen-kernel/src/arch/: mod.rs
eisen-kernel/src/arch/x86_64/: entry.rs  gdt.rs  mod.rs  ports.rs
eisen-kernel/src/arch/x86_64/boot/: mod.rs
eisen-kernel/src/arch/x86_64/int/: isr.S  isr.rs
eisen-kernel/src/dev/: mod.rs
eisen-kernel/src/dev/console/: mod.rs
eisen-kernel/src/dev/console/font/: charset.rs  mod.rs  psf2.rs
eisen-kernel/src/dev/mem/: allocator.rs  mod.rs
eisen-kernel/src/dev/panic/: kpart.in  mod.rs
eisen-kernel/src/stub/: bootinfo.S  mbr_trap.S
eisen-lib/: Cargo.toml  Makefile
eisen-lib/src/: bootinfo.rs  lib.rs
eisen-lib/src/boot/: bootinfo.rs  mod.rs  sysinfo.rs
eisen-wtd/: Cargo.toml  Makefile
eisen-wtd/.cargo/: config.toml
eisen-wtd/src/: elf.rs  main.rs  paging.rs  sysinfo.rs
eisen-wtd/src/boot_strategy/: elf.rs  flat.rs  mod.rs
kernel/: Cargo.toml  Makefile  build.rs  gen-env-linker.sh  linker.ld  sign.sh  strip.sh
kernel/src/: debug.rs  kdata.rs  lib.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: mem.rs  mod.rs  stack.S
kernel/src/arch/x86_64/int/: idt.rs  isr.S  mod.rs  pic.rs
kernel/src/boot/: Cargo.toml  bootinfo.S  lib.rs  mbrtrap.S  mod.rs
kernel/src/helpers/: mod.rs
kernel/src/kdata/: Cargo.toml  kargs.rs  ksysinfo.rs  lib.rs
kernel/src/stub/: Cargo.toml  bootinfo.S  lib.rs  mod.rs
setup/: setup-arch.sh
