[package]
name = "eisen-boot"
version = "0.1.0"
edition = "2024"

[dependencies]
uefi = { version = "0.36.1", features = ["alloc", "global_allocator", "panic_handler"] }
eisen-kernel-stub = { path = "../kernel/src/stub", features = ["alloc"] }
toml = { version = "0.9.12", default-features = false, features = ["parse", "serde"] }
serde = { version = "1.0.228", features = ["alloc", "derive"], default-features = false }
spin = "0.10.0"
