[package]
name = "eisen-kernel"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
test = false
bench = false

[dependencies]
eisen-lib = { path = "../eisen-lib" }

psf2      = { version = "0.4.0",  default-features = false }
spin = "0.10.0"
x86_64    = { version = "0.15.2", features = ["instructions", "abi_x86_interrupt"] }

[build-dependencies]

[profile.dev]
lto = true
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true


