[package]
name = "eisen"
version = "0.1.0"
edition = "2021"

[dependencies]
eisen-lib = { path = "../eisen-lib", features = ["alloc"] }
elf = {version = "0.8.0", default-features = false}
uefi = { version = "^0.34", features = ["alloc", "panic_handler"] }
uefi-raw = "^0.10"
uuid = { version = "1.17.0", default-features = false }
wakatiwai-udive = "^0.1"
