[package]
name = "eisen-kernel"
version = "0.2.0"
edition = "2024"

[lib]
crate-type = ["staticlib"]
test = false
bench = false

[workspace]
members = ["src/boot", "src/kdata"]

[dependencies]
eisen-kernel-data = { path = "src/kdata", features = ["kernel-only"] }

x86_64 = { version = "0.15.2", features = ["instructions", "abi_x86_interrupt"] }

[build-dependencies]

[profile.dev]
lto = true
panic = "abort"

[profile.release]
lto = true
opt-level = "z"
panic = "abort"
strip = true


